--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,16 +1,20 @@
 
-add_executable(rp2040_led
+add_executable(glowworm
     main.cpp
-    NeoPixelConnect.cpp
 )
 
-pico_enable_stdio_usb(rp2040_led 1)
-pico_enable_stdio_uart(rp2040_led 0)
+pico_enable_stdio_usb(glowworm 1)
+pico_enable_stdio_uart(glowworm 0)
 
-pico_add_extra_outputs(rp2040_led)
+pico_add_extra_outputs(glowworm)
+
+add_subdirectory(neopixel)
+add_subdirectory(color)
 
 target_link_libraries(
-    rp2040_led
+    glowworm
+    neopixel
+    color
     pico_stdlib
     hardware_adc
     hardware_dma
