Added multiple patterns
The part only works with single tap OR double tap.
So for now, single tap on the other axis. Double tap on X.
Could replace this with our own timer and just hit on singles.

--- a/src/leds/CMakeLists.txt
+++ b/src/leds/CMakeLists.txt
@@ -5,12 +5,13 @@ add_library(leds
 
 target_link_libraries(
     leds
+    color_patterns
     neopixel
-    color
     pico_stdlib
     hardware_gpio
 )
 
 add_subdirectory(color)
 add_subdirectory(neopixel)
+add_subdirectory(color_patterns)
 target_include_directories(leds PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
